	the file, like other source files. Declare a real type for records
	that may be used by other modules. Fix xmlparseroption() type
	definition. Use types instead of record in contract. Fix many
	contracts; add a command where contracts couldn't be fixed because of
	dialyzer limitations. Now that R12B is required, use lists:keystore/4
	instead of the replacement function in exmpp_utils.

2009-03-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xml.hrl: Fix xmldefaultnss() type definition. Add
	definitions for xmldefaultns(), xmlpathcomponent(), xmlel() and
	xmlchild() types.

	* src/core/exmpp_xml.erl: Complete addition of contracts. Fix
	documentation. Rename xmlelement_to_xmlel_and_ns_tables/3 to
	xmlelement_to_xmlel_and_nss_tables/3.
	(append_cdata/2): Change API: this function now works on an XML
	element, not on the children. For the previous behaviour, use the new
	append_cdata_to_list/2 function.

	* src/core/exmpp_stanza.erl: Fix some contracts. Remove useless
	clauses in to_list/2, to_list/1, to_binary/2, to_binary/1, to_iolist/2
	and to_iolist/1.

	* src/core/exmpp_iq.erl: Add contracts. Fix documentation. Fix bugs
	where exmpp_stanza:set_id_in_attrs/2 was called with the old
	'undefined' atom, instead of the new 'random' atom to set a random
	ID.
	(xmlel_to_iq/1): Remove an unused case clause; get_payload/1 will
	never return 'undefined'.

2009-02-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xml.hrl, include/exmpp_xmpp.hrl,
	include/internal/exmpp_xmpp.hrl: Add type declarations to records.
	This is used by dialyzer.

	* src/core/exmpp_utils.erl (any_to_list/1, any_to_binary/1): Add new
	functions to convert a string/binary/integer/atom to list and binary
	respectively.

	* src/core/exmpp_xml.erl: Rename some types in documentation:
	  o  xmlelement() -> xmlel_old()
	  o  xmlnsattribute() -> xmlattr()
	  o  xmlattribute() -> xmlattr_old()